Bug 259018 - Konquest crashes after automatic Win message on a "Only one Player - Human" game [QString::*, Player::coloredName, GameView::turn]
Summary: Konquest crashes after automatic Win message on a "Only one Player - Human" g...
Status: RESOLVED FIXED
Alias: None
Product: konquest
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Pierre Ducroquet
URL:
Keywords:
: 259659 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-12-06 17:47 UTC by Dimitar
Modified: 2011-08-21 10:19 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (5.43 KB, text/plain)
2010-12-29 07:50 UTC, adrianwetzel
Details
New crash information added by DrKonqi (6.33 KB, text/plain)
2011-03-18 22:42 UTC, Riccardo Basso
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dimitar 2010-12-06 17:47:53 UTC
Application: konquest (2.0)
KDE Platform Version: 4.5.3 (KDE 4.5.3)
Qt Version: 4.7.1
Operating System: Linux 2.6.35.9-64.fc14.i686 i686
Distribution: "Fedora release 14 (Laughlin)"

-- Information about the crash:
- What I was doing when the application crashed:

- Custom settings of the application:
Settings --- only one Player-human
automatic win and then  crash:

Application: Konquest (konquest), signal: Segmentation fault
[KCrash Handler]
#7  0x06e3899b in QString::append (this=0xbfcc73d4, str=...) at tools/qstring.cpp:1533
#8  0x06e3eb6d in operator+= (this=0xbfcc72dc, numArgs=2, args=0xbfcc72d0) at ../../src/corelib/tools/qstring.h:281
#9  QString::multiArg (this=0xbfcc72dc, numArgs=2, args=0xbfcc72d0) at tools/qstring.cpp:6935
#10 0x080576ba in arg (this=0x8f19e20) at /usr/include/QtCore/qstring.h:758
#11 Player::coloredName (this=0x8f19e20) at /usr/src/debug/kdegames-4.5.3/konquest/player.cc:60
#12 0x0805c6a5 in GameView::turn (this=0x8e18a20) at /usr/src/debug/kdegames-4.5.3/konquest/gameview.cc:280
#13 0x0805c495 in GameView::turn (this=0x8e18a20) at /usr/src/debug/kdegames-4.5.3/konquest/gameview.cc:261
#14 0x0805dffa in GameView::startNewGame (this=0x8e18a20) at /usr/src/debug/kdegames-4.5.3/konquest/gameview.cc:548
#15 0x0805e97b in GameView::qt_metacall (this=0x8e18a20, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbfcc7688) at /usr/src/debug/kdegames-4.5.3/i686-redhat-linux-gnu/konquest/gameview.moc:100
#16 0x06ee8b6b in QMetaObject::metacall (object=0x8e18a20, cl=QMetaObject::InvokeMetaMethod, idx=28, argv=0xbfcc7688) at kernel/qmetaobject.cpp:237
#17 0x06ef8047 in QMetaObject::activate (sender=0x8e19e60, m=0x7f458f8, local_signal_index=1, argv=0xbfcc7688) at kernel/qobject.cpp:3272
#18 0x075fbfca in QAction::triggered (this=0x8e19e60, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#19 0x075fc24b in QAction::activate (this=0x8e19e60, event=QAction::Trigger) at kernel/qaction.cpp:1257
#20 0x07ae4b93 in trigger (this=0x90cb508) at ../../src/gui/kernel/qaction.h:218
#21 QToolButton::nextCheckState (this=0x90cb508) at widgets/qtoolbutton.cpp:1147
#22 0x07a10b94 in QAbstractButtonPrivate::click (this=0x9030228) at widgets/qabstractbutton.cpp:528
#23 0x07a10e8e in QAbstractButton::mouseReleaseEvent (this=0x90cb508, e=0xbfcc7e24) at widgets/qabstractbutton.cpp:1121
#24 0x07ae4c7d in QToolButton::mouseReleaseEvent (this=0x90cb508, e=0xbfcc7e24) at widgets/qtoolbutton.cpp:721
#25 0x0765c85b in QWidget::event (this=0x90cb508, event=0xbfcc7e24) at kernel/qwidget.cpp:8200
#26 0x07a0fecf in QAbstractButton::event (this=0x90cb508, e=0xbfcc7e24) at widgets/qabstractbutton.cpp:1080
#27 0x07ae63fb in QToolButton::event (this=0x90cb508, event=0xbfcc7e24) at widgets/qtoolbutton.cpp:1163
#28 0x0760326c in QApplicationPrivate::notify_helper (this=0x8d347e8, receiver=0x90cb508, e=0xbfcc7e24) at kernel/qapplication.cpp:4445
#29 0x0760888d in QApplication::notify (this=0xbfcc86c4, receiver=0x90cb508, e=0xbfcc7e24) at kernel/qapplication.cpp:4006
#30 0x021dae3b in KApplication::notify (this=0xbfcc86c4, receiver=0x90cb508, event=0xbfcc7e24) at /usr/src/debug/kdelibs-4.5.3/kdeui/kernel/kapplication.cpp:310
#31 0x06ee2333 in QCoreApplication::notifyInternal (this=0xbfcc86c4, receiver=0x90cb508, event=0xbfcc7e24) at kernel/qcoreapplication.cpp:732
#32 0x076041f8 in sendSpontaneousEvent (receiver=0x90cb508, event=0xbfcc7e24, alienWidget=0x90cb508, nativeWidget=0x8dfd790, buttonDown=0x7f61c80, lastMouseReceiver=..., spontaneous=true) at ../../src/corelib/kernel/qcoreapplication.h:218
#33 QApplicationPrivate::sendMouseEvent (receiver=0x90cb508, event=0xbfcc7e24, alienWidget=0x90cb508, nativeWidget=0x8dfd790, buttonDown=0x7f61c80, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3103
#34 0x0768d524 in QETWidget::translateMouseEvent (this=0x8dfd790, event=0xbfcc834c) at kernel/qapplication_x11.cpp:4438
#35 0x0768b957 in QApplication::x11ProcessEvent (this=0xbfcc86c4, event=0xbfcc834c) at kernel/qapplication_x11.cpp:3564
#36 0x076b6832 in x11EventSourceDispatch (s=0x8d38200, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#37 0x009ca192 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#38 0x009ca978 in ?? () from /lib/libglib-2.0.so.0
#39 0x009cac35 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#40 0x06f1002d in QEventDispatcherGlib::processEvents (this=0x8d2f368, flags=...) at kernel/qeventdispatcher_glib.cpp:415
#41 0x076b6406 in QGuiEventDispatcherGlib::processEvents (this=0x8d2f368, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#42 0x06ee14ca in QEventLoop::processEvents (this=0xbfcc8624, flags=...) at kernel/qeventloop.cpp:149
#43 0x06ee177a in QEventLoop::exec (this=0xbfcc8624, flags=...) at kernel/qeventloop.cpp:201
#44 0x06ee6327 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#45 0x07601078 in QApplication::exec () at kernel/qapplication.cpp:3719
#46 0x08055358 in main (argc=) at /usr/src/debug/kdegames-4.5.3/konquest/Konquest.cc:60

The crash can be reproduced every time.

-- Backtrace:
Application: Konquest (konquest), signal: Segmentation fault
[KCrash Handler]
#7  QColor::blue (this=0x18) at painting/qcolor.cpp:1131
#8  0x07732c17 in QColor::name (this=0x18) at painting/qcolor.cpp:505
#9  0x08057678 in Player::coloredName (this=0xc) at /usr/src/debug/kdegames-4.5.3/konquest/player.cc:60
#10 0x0805c6a5 in GameView::turn (this=0x8227a90) at /usr/src/debug/kdegames-4.5.3/konquest/gameview.cc:280
#11 0x0805c495 in GameView::turn (this=0x8227a90) at /usr/src/debug/kdegames-4.5.3/konquest/gameview.cc:261
#12 0x0805dffa in GameView::startNewGame (this=0x8227a90) at /usr/src/debug/kdegames-4.5.3/konquest/gameview.cc:548
#13 0x0805e97b in GameView::qt_metacall (this=0x8227a90, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbfe75fa8) at /usr/src/debug/kdegames-4.5.3/i686-redhat-linux-gnu/konquest/gameview.moc:100
#14 0x06ee8b6b in QMetaObject::metacall (object=0x8227a90, cl=QMetaObject::InvokeMetaMethod, idx=28, argv=0xbfe75fa8) at kernel/qmetaobject.cpp:237
#15 0x06ef8047 in QMetaObject::activate (sender=0x8228ed0, m=0x7f458f8, local_signal_index=1, argv=0xbfe75fa8) at kernel/qobject.cpp:3272
#16 0x075fbfca in QAction::triggered (this=0x8228ed0, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#17 0x075fc24b in QAction::activate (this=0x8228ed0, event=QAction::Trigger) at kernel/qaction.cpp:1257
#18 0x07a9bb5d in QMenuPrivate::activateCausedStack (this=0x844dbd8, causedStack=..., action=0x8228ed0, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:993
#19 0x07aa26b3 in QMenuPrivate::activateAction (this=0x844dbd8, action=0x8228ed0, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:1085
#20 0x07aa359e in QMenu::mouseReleaseEvent (this=0x844db98, e=0xbfe76854) at widgets/qmenu.cpp:2301
#21 0x022c5f45 in KMenu::mouseReleaseEvent (this=0x844db98, e=0xbfe76854) at /usr/src/debug/kdelibs-4.5.3/kdeui/widgets/kmenu.cpp:471
#22 0x0765c85b in QWidget::event (this=0x844db98, event=0xbfe76854) at kernel/qwidget.cpp:8200
#23 0x07aa3a67 in QMenu::event (this=0x844db98, e=0xbfe76854) at widgets/qmenu.cpp:2410
#24 0x0760326c in QApplicationPrivate::notify_helper (this=0x81097e8, receiver=0x844db98, e=0xbfe76854) at kernel/qapplication.cpp:4445
#25 0x0760888d in QApplication::notify (this=0xbfe770f4, receiver=0x844db98, e=0xbfe76854) at kernel/qapplication.cpp:4006
#26 0x021dae3b in KApplication::notify (this=0xbfe770f4, receiver=0x844db98, event=0xbfe76854) at /usr/src/debug/kdelibs-4.5.3/kdeui/kernel/kapplication.cpp:310
#27 0x06ee2333 in QCoreApplication::notifyInternal (this=0xbfe770f4, receiver=0x844db98, event=0xbfe76854) at kernel/qcoreapplication.cpp:732
#28 0x076041f8 in sendSpontaneousEvent (receiver=0x844db98, event=0xbfe76854, alienWidget=0x0, nativeWidget=0x844db98, buttonDown=0x7f61c80, lastMouseReceiver=..., spontaneous=true) at ../../src/corelib/kernel/qcoreapplication.h:218
#29 QApplicationPrivate::sendMouseEvent (receiver=0x844db98, event=0xbfe76854, alienWidget=0x0, nativeWidget=0x844db98, buttonDown=0x7f61c80, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3103
#30 0x0768d72c in QETWidget::translateMouseEvent (this=0x844db98, event=0xbfe76d7c) at kernel/qapplication_x11.cpp:4372
#31 0x0768b957 in QApplication::x11ProcessEvent (this=0xbfe770f4, event=0xbfe76d7c) at kernel/qapplication_x11.cpp:3564
#32 0x076b6832 in x11EventSourceDispatch (s=0x810d200, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#33 0x009ca192 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#34 0x009ca978 in ?? () from /lib/libglib-2.0.so.0
#35 0x009cac35 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#36 0x06f1002d in QEventDispatcherGlib::processEvents (this=0x8104368, flags=...) at kernel/qeventdispatcher_glib.cpp:415
#37 0x076b6406 in QGuiEventDispatcherGlib::processEvents (this=0x8104368, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#38 0x06ee14ca in QEventLoop::processEvents (this=0xbfe77054, flags=...) at kernel/qeventloop.cpp:149
#39 0x06ee177a in QEventLoop::exec (this=0xbfe77054, flags=...) at kernel/qeventloop.cpp:201
#40 0x06ee6327 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#41 0x07601078 in QApplication::exec () at kernel/qapplication.cpp:3719
#42 0x08055358 in main (argc=141104336, argv=0x31) at /usr/src/debug/kdegames-4.5.3/konquest/Konquest.cc:60

Reported using DrKonqi
Comment 1 Dario Andres 2010-12-13 17:03:06 UTC
*** Bug 259659 has been marked as a duplicate of this bug. ***
Comment 2 adrianwetzel 2010-12-29 07:50:48 UTC
Created attachment 55341 [details]
New crash information added by DrKonqi

konquest (2.0) on KDE Platform 4.5.1 (KDE 4.5.1) using Qt 4.7.0

- What I was doing when the application crashed:Wanted to play vs computer only had one human player.  When I pressed play I automatically won and the game crashed.

- Custom settings of the application:No custom settings this was the first time I played but I check again to see if I could duplicate the crash and was able to duplicate.  Just chose one human player and press play.

-- Backtrace (Reduced):
#6  QColor::blue (this=0x18) at painting/qcolor.cpp:1131
#7  0x00007f20fb785996 in QColor::name (this=0x18) at painting/qcolor.cpp:505
#8  0x000000000041323e in Player::coloredName (this=<value optimized out>) at ../../konquest/player.cc:60
#9  0x000000000041a4b7 in GameView::turn (this=0x1bacc90) at ../../konquest/gameview.cc:280
#10 0x000000000041a322 in GameView::turn (this=0x1bacc90) at ../../konquest/gameview.cc:261
Comment 3 Riccardo Basso 2011-03-18 22:42:39 UTC
Created attachment 58156 [details]
New crash information added by DrKonqi

konquest (2.0) on KDE Platform 4.5.1 (KDE 4.5.1) using Qt 4.7.0

- What I was doing when the application crashed:
Leggendo il report di gioco
- Custom settings of the application:
Ho inserito un solo player come setting iniziale

-- Backtrace (Reduced):
#7  0x0093fd86 in QString::append (this=0xbfc81224, str=...) at tools/qstring.cpp:1499
#8  0x009416bf in operator+= (this=0xbfc8113c, numArgs=2, args=0xbfc81130) at ../../include/QtCore/../../src/corelib/tools/qstring.h:281
#9  QString::multiArg (this=0xbfc8113c, numArgs=2, args=0xbfc81130) at tools/qstring.cpp:6903
#10 0x080579b8 in arg (this=0xa25ea00) at /usr/include/qt4/QtCore/qstring.h:758
#11 Player::coloredName (this=0xa25ea00) at ../../konquest/player.cc:60
Comment 4 Pierre Ducroquet 2011-08-21 10:19:25 UTC
Bug fixed in 4.7 branch with commit r1248531

Thanks for the reports