Fix some crashing conditions... Thanks for the reports.

BUG: 259018

svn path=/branches/KDE/4.7/kdegames/konquest/; revision=1248531